--- a/UI/Views/Users/Create.cshtml
+++ b/UI/Views/Users/Create.cshtml
@@ -59,5 +59,6 @@
         @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control" })
     </div>
 
-    <button type="submit" class="btn btn-primary">Register</button>
+    <button type="submit" class="btn btn-success">Register</button>
+    <a href="@Url.Action("Index")" class="btn btn-secondary">Cancel</a>
 }
