--- a/UI/Views/Shared/_Layout.cshtml
+++ b/UI/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                                 Menu
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="@Url.Action("Privacy","Home")">Privacy</a></li>
+                                @* <li><a class="dropdown-item" href="@Url.Action("Privacy","Home")">Privacy</a></li> *@
                                 <li><a class="dropdown-item" href="@Url.Action("Index", "StrategyCodes")">Strategy Codes</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("Index", "RiskToleranceCodes")">Risk Tolerance Codes</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("Index", "PurposeOfInvestmentCodes")">Purpose Of Investment Codes</a></li>
